<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humi_sensor_data"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/Graph"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintTop_toBottomOf="@+id/topText" />

    <Button
        android:id="@+id/apply"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/apply"
        android:onClick="updateZoneOnClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Graph"
        />

    <TextView
        android:id="@+id/zoneTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone"
        app:layout_constraintRight_toLeftOf="@id/zoneValue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/apply"
        app:layout_constraintBottom_toTopOf="@id/LL"
        />
    <EditText
        android:id="@+id/zoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_zone"
        app:layout_constraintRight_toLeftOf="@id/apply"
        app:layout_constraintLeft_toRightOf="@id/zoneTXT"
        app:layout_constraintTop_toBottomOf="@id/Graph"
        app:layout_constraintBottom_toTopOf="@id/LLValue"
        />

    <TextView
        android:id="@+id/LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_limit"
        app:layout_constraintTop_toBottomOf="@id/zoneTXT"
        app:layout_constraintBottom_toTopOf="@id/HL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/LLValue"
        />

    <TextView
        android:id="@+id/LLValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_value"
        app:layout_constraintRight_toLeftOf="@id/middle_guideline"
        app:layout_constraintLeft_toRightOf="@id/LL"
        app:layout_constraintTop_toBottomOf="@id/zoneValue"
        app:layout_constraintBottom_toTopOf="@id/HLValue"
        />

    <TextView
        android:id="@+id/HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_limit"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintTop_toBottomOf="@id/LL"
        app:layout_constraintRight_toLeftOf="@id/HLValue"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/HLValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_value"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintLeft_toRightOf="@+id/HL"
        app:layout_constraintRight_toLeftOf="@id/middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/LLValue"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
        app:layout_constraintRight_toRightOf="@id/middle_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/SAR"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/sarttmm"
        android:onClick="BackOnClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="450dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>