<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_sensor_data"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/Graph"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintTop_toBottomOf="@+id/topText" />

    <TextView
        android:id="@+id/HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_limit"
        app:layout_constraintBottom_toTopOf="@id/LL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Graph"
        app:layout_constraintRight_toLeftOf="@id/HLValue"
        />

    <TextView
        android:id="@+id/HLValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_value"
        app:layout_constraintBottom_toTopOf="@id/LL"
        app:layout_constraintLeft_toRightOf="@+id/HL"
        app:layout_constraintTop_toBottomOf="@id/Graph"
        app:layout_constraintRight_toLeftOf="@id/AddHL"
        />


    <Button
        android:id="@+id/AddHL"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/add"
        android:onClick="AddHighOnClick"
        app:layout_constraintBottom_toTopOf="@id/HLValue"
        app:layout_constraintLeft_toRightOf="@+id/HLValue"
        app:layout_constraintRight_toRightOf="parent"
        />


    <Button
        android:id="@+id/SubHL"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/minus"
        android:onClick="SubHighOnClick"
        app:layout_constraintLeft_toRightOf="@+id/HLValue"
        app:layout_constraintTop_toBottomOf="@id/HLValue"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_limit"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HL"
        app:layout_constraintRight_toLeftOf="@id/LLValue"
        />

    <TextView
        android:id="@+id/LLValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_value"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintLeft_toRightOf="@id/LL"
        app:layout_constraintTop_toBottomOf="@id/HL"
        app:layout_constraintRight_toLeftOf="@id/AddLL"
        />

    <Button
        android:id="@+id/AddLL"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/add"
        android:onClick="AddLowOnClick"
        app:layout_constraintBottom_toTopOf="@id/LLValue"
        app:layout_constraintLeft_toRightOf="@+id/HLValue"
        app:layout_constraintRight_toRightOf="parent"
        />


    <Button
        android:id="@+id/SubLL"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/minus"
        android:onClick="SubLowOnClick"
        app:layout_constraintLeft_toRightOf="@+id/LLValue"
        app:layout_constraintTop_toBottomOf="@id/LLValue"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/SAR"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/sarttmm"
        android:onClick="BackOnClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="640dp" />


</androidx.constraintlayout.widget.ConstraintLayout>