<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <FrameLayout
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/middle"
        android:background="@color/colorAccent"
        android:contentDescription = "logo" />
    <Button
        android:id="@+id/temperature"
        android:onClick="temperatureOnClick"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/temperature_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/humidity"
        app:layout_constraintRight_toLeftOf="@id/stats"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/humidity"
        android:onClick="humidityOnClick"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/humidity_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/stats"
        android:onClick="statsOnClick"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/stats_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/temperature"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/msg"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/middle"
        app:layout_constraintBottom_toTopOf="@id/edit" />
    <EditText
        android:id="@+id/edit"
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:autofillHints=""
        android:focusable="false"
        android:gravity="top|left"
        android:hint="@string/ghostmsg"
        android:inputType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>